--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <body>
 <h1>Hello World Tutorial</h1>
 This is my tutorial web site.
+Quick setup — if you’ve done this kind of thing before.
 </body>
 </html>
